--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,13 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "flasgger>=0.9.7.1",
     "flask>=3.1.0",
     "flask-jwt-extended>=4.7.1",
     "flask-migrate>=4.1.0",
     "httpx>=0.28.1",
     "ipykernel>=6.29.5",
+    "loguru>=0.7.3",
     "pandas>=2.2.3",
     "passlib>=1.7.4",
     "pyjwt==2.9.0",
